Updated Dockerfile