@@ -12,7 +12,6 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
 
 FROM openjdk:11-jre-slim
 LABEL maintainer="sebastien.pouplin@tatacommunications.com"
-ENV JAVA_TOOL_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:+UseNUMA
 COPY --from=builder /go/src/github.com/lucabrasi83/vscan-agent/banner.txt /
 COPY --from=builder /go/src/github.com/lucabrasi83/vscan-agent/vscan-agent /
 COPY --from=builder /go/src/github.com/lucabrasi83/vscan-agent/joval /joval
